styles/globals.css
html,
body {
  padding: 0;
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
  background-color: #1f1f1f;
  color: white;
  user-select: none;
  -webkit-user-select: none;
}
@font-face {
  font-family: 'retrolight';
  src: url('../public/RetroTypo.ttf');
}
a {
  color: inherit;
  text-decoration: none;
}

.firstViewer{
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}
.firstViewer img{
  position: relative;
  height: 400px;
  width: 100%;
  border-radius: 55px;
  filter: brightness(0.6);
  object-fit: cover;
}
.firstViewer h2{
  position: absolute;
  font-size: 40px;
  line-height: 30px;

}
.firstViewerButton{
  position: absolute;
  margin-top: 130px;
  height: 50px;
  width: 300px;
  border-radius: 10px;
  background-color: #428EFF;
  border: 0px;
  font-size: 1.25rem;
  line-height: 1.75rem;
  color: #202124;
}
.firstViewerButton:hover{
  color: white;
  background-color: #202124;
}
.aboutContainer{
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  background-color: rgb(255 187 1);
  margin-top: 30px;
  border-radius: 55px;
  height: fit-content;
}
.aboutTextContainer{
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  padding: 45px;
  width: 40%;
  color: #202124;
}
.aboutImage{
  height: 200px;
  width: 200px;
  border-radius: 25px;
  margin: 30px;
}
.buttonMain{
  height: 50px;
  width: 300px;
  border-radius: 10px;
  background-color: transparent;
  border: 2px solid;
  font-size: 1.25rem;
  line-height: 1.75rem;
  color: #202124;
  border-color: #202124;
}
.buttonMain:hover{
  background-color: white;
}
.overviewContainer{
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  align-items: center;
  margin: 30px;
}
.overviewContainer h1{
  display: none;
}
.overviewBoxContainer{
  display: flex;
  flex-direction: column;
  background-color: transparent;
  padding: 12px;
}
.overviewBoxContainer img{
  height: 200px;
  width: 300px;
  object-fit: cover;
  border-radius: 25px;
 
}
.overviewBoxContainer:hover{
  border: 1px solid white;
  border-radius: 25px;
}
.flexContainer{
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  height: 80vh;
}
.timeContainer{
  display: flex;
  flex-direction: row;
  grid-template-columns: auto;
  width: 50vw;
  margin-top: -55px;
}
.boxTimer{
  background-color: transparent;
  border: 1px solid white;
  border-radius: 25px;
  height: auto;
  width: 500px;
  text-align:center;
  margin: 10px;
  font-size: 70px;
  padding: 10px;
}
.boxTimer h1{
  font-family: 'retrolight';
  font-weight:lighter;
  font-style: normal;
  color: #43c0ec;
}
.boxTimer h2{
  font-size: 30px;
}
.rightSide{
  display: flex;
  flex-direction: column;
  background-color: transparent;
  height: 90%;
}
.rightSideIntro{
  border-radius: 25px;
  padding: 45px;
  background-color: #ff5145;
}
.mobileView{
  display: none;
}

.mobileTextMove{
  display: none;
}
.mobileNavMenu{
  display: none;
}
.patternflex{
  display: none;
}
@media(max-width:600px){

  .flexContainer{
    flex-direction: column;
    height: 100vh;
  }
  .timeContainer{
    justify-content: center;
    align-items: center;
    margin-top: 0px;
    margin-bottom: 30px;
    width: 0;
    padding: 0px;
  }
  .boxTimer{
    border-radius: 15px;
    width: 5rem;
    margin: 5px;
    font-size: 30px;
    padding: 10px;
  }
  .boxTimer:hover{
    background-color: #ff5145;
  }
  .boxTimer h1:hover{
    color: white;
  }
  .boxTimer h2{
    font-size: 1rem;
  }
  .rightSide{
    justify-content: center;
    align-items: center;
  }
  .rightSideIntro{
    background-color: transparent;
    border :1px solid white;
    margin-bottom: 30px;
    width: 95vw;
    padding: 30px;
    height: fit-content;
    background-image: url('../public/letsgo.svg');
    background-repeat: no-repeat;
    background-position-x:230px;
  }
  .rightSideVid{
    display: none;
  }
  .firstViewer{
    margin-top:0rem;
  }
  .firstViewer img{
    border-radius: 35px;
    height: 500px;
    width: 100vw;
    filter: brightness(.6);
  }
  .firstViewer h2{
    position: absolute;
    font-size: 25px;
    line-height: 30px;
    text-align: center;
    padding: 5px;
  
  }

  .firstViewerButton{
    margin-top: 200px;
  }
  .aboutContainer{
    flex-direction: column;
    justify-content: center;
    align-items: center;
    width:95vw;
    border-radius: 55px;
    background-color: #DADCE0;
    border:1px solid white;
  }
  .aboutTextContainer{
    flex-direction: column;
    justify-content: flex-start;
    color: black;
    padding: 10px;
    width: 100%;
    text-align: left;
  }
  .aboutTextContainer h1{
    font-size: 25px;
    font-weight: 500;
  }
  .aboutImage{
    height: 300px;
    width: 300px;
    border-radius: 25px;
    margin: 30px;
  }
  .buttonMain{
    width: 200px;
    color:black;
    border:  1px solid black;
  }
  .buttonMain:hover{
    background-color:#202124;
    color:white ;
  }
  .overviewContainer{
    flex-direction: column;
    justify-content: center;
    margin: 10px;
  }
  .overviewContainer h1{
    display: block;
  }
  .overviewBoxContainer{
    border-radius: 25px;
    margin-bottom: 30px;
    border: 1px solid white;
    width: 120%;
  }
  .overviewBoxContainer:hover{
    color: #202124;
    background-color: #428EFF;
    border: 1px solid #428EFF;
  }
  .overviewBoxContainer img{
    width: 100%;
  }
  .mobileView{
    display: flex;
    height:40vh;
    overflow-y: hidden;
  }
  .mobileView img{
    object-fit: cover;
    height: 300px;
    transform: rotate(35deg);
    margin-right: 137px;
  }
  .mobileTextMove{
    display: none;
    flex-direction: row;
    height: 30vh;
    background-image: linear-gradient(
  180deg,
  hsl(216deg 100% 63%) 0%,
  hsl(215deg 74% 58%) 10%,
  hsl(214deg 52% 52%) 23%,
  hsl(209deg 37% 45%) 43%,
  hsl(203deg 28% 42%) 85%,
  hsl(203deg 26% 43%) 94%,
  hsl(202deg 23% 45%) 98%,
  hsl(202deg 21% 46%) 100%
);


  }
  .flexRowContainer{
    display: flex;
    flex-direction: row;
    justify-content: space-between;

    width: 100vw;
  }
  @keyframes movetext {
    from{
      transform: translateX(0%);
    }
    to{
      transform: translateX(-50%);
    }
  }
  .flexRowContainer{
    animation:movetext 5s infinite linear;
    animation-delay: 0ms;
    transform: translateX(0%);
  }
  .flexRowContainer h1{
    transition: all 2s ease;
    margin-left: 30px;
  }
  .mobileNavMenu{
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: flex-start;
    z-index: 100;
    height: 100vh;
  }
  .flexMenu{
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: flex-start;
  }
  .linkitem{
    font-size: 2rem;
    color: #DADCE0;
    border-radius: 25px;
    height: auto;
    margin:30px;
    width: 70vw;
    padding: 10px;
    border: 1px solid white;
  }
  .linkitemactive{
    color: #202124;
    background-color: #DADCE0;
  }
  @keyframes animbox {
    from{
      transform: translateY(-100px);

    }
    to{
      transform: translateY(0px);
    }
  }
  @keyframes animboxback {
    from{
      transform: translateY(0px);

    }
    to{
      transform: translateY(-100px);
    }
  }
  .animatebox{
    animation: animbox 0.9s linear;
  }
  .animateboxback{
    animation: animboxback 0.9s linear;
  }
  .patternflex{
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    height: 30vh;
    margin-top:30px;
  }
  .circlePattern{
    border-radius: 55%;
    background-color: #428EFF;
    height: 200px;
    width: 200px;
  }
  .recPattern{
    border-radius: 95px;
    background-color: #ff5145;
    margin-left:100px;
    height: 200px;
    width: 300px;
    margin-top:90px;
  
  }
}
* {
  box-sizing: border-box;
}

